cells: Fixed bad coding style detected by findbugs
- Don't use URL.equals
- Don't catch Exception
- Don't declare Exception to be thrown
- Don't use StringBuffer

Target: trunk
Acked-by: Paul Millar <paul.millar@desy.de>
Patch: http://rb.dcache.org/r/411/